--- a/config/p5dms/tenants/test.yaml
+++ b/config/p5dms/tenants/test.yaml
@@ -1,7 +1,7 @@
 # P5/2 DMS WCS3 Mockservice Tenant Configuration
 
 # tenant 
-TENANT_CAPTION: Prod - WCS3 To REST Adapter
+TENANT_CAPTION: Test - WCS3 To REST Adapter
 
 # http port of service
 WDSREST_HTTP_PORT: 6951
