--- a/config/p5dms/tenants/prod.yaml
+++ b/config/p5dms/tenants/prod.yaml
@@ -1,15 +1,17 @@
-# P5/2 DMS WCS3 Mockservice Tenant Configuration
+# P5 DMS WCS3 Restservice Tenant Configuration
 
 # tenant 
 TENANT_CAPTION: Prod - WCS3 To REST Adapter
 
 # http port of service
-WDSREST_HTTP_PORT: 6950
+WDSREST_HTTP_PORT: 6952
 
 # rest connector type 
-WDSREST_CONNECTOR: '??????'
-WDSREST_BASEURL: '?????????????'
-WDSREST_BEARER: ''
+WDSREST_CONNECTOR: kendox
+WDSREST_BASEURL: 'http://<kendoxserver>:<port>'
+WDSREST_AUTH_USER: '<kendoxuser>'
+WDSREST_AUTH_PASSWORD: 'kendoxpassword>'
+#WDSREST_AUTH_ENCRYPTPASSWORD: '<kendoxcliencryptpassword>'
 
 # extend logging of soap calls
 WDSREST_SOAP_LOG: true 
