Updated configuration for WCS REST version 1.3.113

--- a/config/p5dms/custom-environment-variables.yaml
+++ b/config/p5dms/custom-environment-variables.yaml
@@ -22,6 +22,8 @@ context:
       soapConfig:
         url: WDSREST_SOAPCONFIG_URL 
         log: WDSREST_SOAPCONFIG_LOG
+    viewer:
+      buildViewerUrl: WDSREST_BUILD_VIEWER_URL
     propertyStore: 
       path: WDSREST_PROPERTYSTORE_PATH
     config:
