--- a/config/p5dms/validations/ContentServiceRest.yaml
+++ b/config/p5dms/validations/ContentServiceRest.yaml
@@ -1,5 +1,5 @@
 definitions:
-  $id: 'http://wilken.de/p5/schemas/wcs3D3/defs'
+  $id: 'http://wilken.de/p5/schemas/wcs3Rest/defs'
   definitions:
 
     MappingColumnsConfig: 
@@ -45,6 +45,8 @@ definitions:
         condition: { type: string }
         code: { type: string }
         message: { type: string }
+        result: { type: string }
+        customErrorHandling: { type: string }
       additionalProperties: false 
       required: [ condition, code, message ]
 
@@ -59,8 +61,55 @@ definitions:
       additionalProperties: false 
       required: [ ]
 
+    AuthBearerOptions:
+      type: object
+      properties:
+        key: { type: string }
+      required: [key]
+      additionalProperties: false
+
+    AuthSessionOptions:
+      type: object
+      properties:
+        logonMethod: { type: string }
+        user: { type: string }
+        password: { type: string }
+        encryptPassword: { type: string }
+      required: [logonMethod, user]
+      additionalProperties: false
+      action_decrypt:
+        - encryptPassword
+        - password
+
+    AuthBasicOptions:
+      type: object
+      properties:
+        user: { type: string }
+        password: { type: string }
+        encryptPassword: { type: string }
+      required: [user]
+      additionalProperties: false
+      action_decrypt:
+        - encryptPassword
+        - password
+
     AuthorizationConfig: 
       type: object 
+      properties:
+        type: { type: string }
+        options: { type: object }
+      oneOf:
+        - properties:
+            type: { type: string, const: Bearer }
+            options: { $ref: defs#/definitions/AuthBearerOptions }
+        - properties:
+            type: { type: string, const: Session }
+            options: { $ref: defs#/definitions/AuthSessionOptions }
+        - properties:
+            type: { type: string, const: Basic }
+            options: { $ref: defs#/definitions/AuthBasicOptions }
+      required: [type, options]
+      additionalProperties: false
 
     ConnectionConfig: 
       type: object 
@@ -79,6 +128,10 @@ definitions:
       additionalProperties: false 
       required: [ invoke ]
 
+    GlobalMethodsConfig:
+      type: object
+      additionalProperties: { $ref: defs#/definitions/InvocationConfig }
+
     WcsMethodsConfig: 
       type: object
       properties: 
@@ -90,8 +143,17 @@ definitions:
         addContent: { $ref: defs#/definitions/InvocationConfig }
         supportsDelete: { $ref: defs#/definitions/InvocationConfig }
         delete: { $ref: defs#/definitions/InvocationConfig }
+      additionalProperties: true
+      required:
+        [test, searchContent, getContentData, getContentDescription, updateProperties, addContent, supportsDelete, delete]
+
+    Entire2P5MethodsConfig:
+      type: object
+      properties:
+        getContent: { $ref: defs#/definitions/InvocationConfig }
+        getMeta: { $ref: defs#/definitions/InvocationConfig }
       additionalProperties: false 
-      required: [ test, searchContent, getContentData, getContentDescription, updateProperties, addContent, supportsDelete, delete ]
+      required: [getContent, getMeta]
 
     RestConnectorConfig: 
       type: object 
@@ -101,21 +163,19 @@ definitions:
         authorization: { $ref: defs#/definitions/AuthorizationConfig }
         connection: { $ref: defs#/definitions/ConnectionConfig }
         mappings: { $ref: defs#/definitions/MappingsConfig }
+        globalMethods: { $ref: defs#/definitions/GlobalMethodsConfig }
         wcsMethods: { $ref: defs#/definitions/WcsMethodsConfig }
-        #apiKey: { type: string }
-        #repositoryId: { type: string }
-        #mapping: { $ref: defs#/definitions/MappingConfig }
-        #methods: { $ref: defs#/definitions/MethodsConfig }
+        entire2P5Methods: { $ref: defs#/definitions/Entire2P5MethodsConfig }
       additionalProperties: false 
-      #required: [ baseUrl, apiKey, repositoryId, mapping, methods  ]
-      required: [ defaults, baseUrl, authorization, connection, mappings ]
+      required: [defaults, baseUrl, authorization, connection, mappings, globalMethods, wcsMethods]
+
     RestConnectorsConfig: 
       type: object 
       additionalProperties: { $ref: defs#/definitions/RestConnectorConfig }
   
 schemas:
   ConfigFile:
-    $id: 'http://wilken.de/p5/schemas/wcs3D3/ConfigFile'
+    $id: 'http://wilken.de/p5/schemas/wcs3Rest/ConfigFile'
     $async: false
     type: object
     properties:
